--- a/__static/custom.css
+++ b/__static/custom.css
@@ -247,6 +247,14 @@ table {
     margin-top: 10px;
 }
 
+.table thead th {
+    border-bottom: 2px solid var(--pst-color-border);
+}
+.table td, .table th {
+    padding: .65rem;
+    border-top: 1px solid var(--pst-color-border);
+}
+
 /* */
 dt:target, span.highlighted {
     background-color: rgba(var(--pst-color-link-hover), 0.3);
