--- a/__static/custom.css
+++ b/__static/custom.css
@@ -243,10 +243,12 @@ a:hover code.literal{
 }
 
 /* override style for tables */
+.table {
+    color: var(--pst-color-text-base);
+}
 table {
     margin-top: 10px;
 }
-
 .table thead th {
     border-bottom: 2px solid var(--pst-color-border);
 }
