--- a/__static/custom.css
+++ b/__static/custom.css
@@ -146,7 +146,7 @@ html[data-theme="dark"] img {
 
 /* override style for code blocks */
 pre {
-    border: 1px solid rgba(var(--pst-color-preformatted-background),1); /* e1e4e5 */
+    border: 1px solid var(--pst-color-preformatted-background); /* e1e4e5 */
     font-family: var(--pst-font-family-monospace-system);
     border-radius: 4px;
     box-shadow: none;
